syntax = "proto3";

package pb;

option go_package = "service/user/pb";

message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message LoginResponse {
    string Id = 1;
    string Token = 2;
}

message RegisterRequest {
    string Username = 1;
    string Password = 2;
}

message RegisterResponse {
    string Id = 1;
    string Token = 2;
}

message UserInfoRequest {
    string Id = 1;
}

message UserInfoResponse {
    string Id = 1;
    string Username = 2;
    int64 Gender = 3;
    string Email = 4;
    string Phone = 5;
}

service User {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}